# deploy-weather-prediction-service

./: .gitignore  README.md  dvc.yaml  params.yaml  predict.py  pyproject.toml  test.py
.dvc/: config
Infrastructure/: datapak_manage.py
Infrastructure/terraform/: .gitignore  main.tf  provider.tf
data/: .gitignore  weatherAUS.csv.dvc
reports/: .gitignore  metrics_file.json  train_pipe.joblib
src/pipeline/: model_deploy_pipeline.py  openscale.py  test.py  test_openscale.py
src/stages/: evaluate.py  load_data.py  preprocess.py  train.py
